crates/ox-cli/tests/snapshots/settings_e2e__new_connection_inline_after_4_t.snap
---
source: crates/ox-cli/tests/settings_e2e.rs
assertion_line: 1250
expression: "&frame"
---
┌Settings──────────────────────────────────────────────────────────────────────┐
│▾ Connections [0]                                                             │
│    Name▸ Test▏                                                               │
│▸ Models                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
