crates/ox-cli/tests/snapshots/settings_e2e__new_connection_inline_just_opened.snap
---
source: crates/ox-cli/tests/settings_e2e.rs
assertion_line: 1238
expression: "&frame_after_a"
---
┌Settings──────────────────────────────────────────────────────────────────────┐
│▾ Connections [0]                                                             │
│    Name▸ ▏                                                                   │
│▸ Models                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
