crates/ox-cli/tests/snapshots/settings_e2e__new_connection_modal_after_4_t.snap
---
source: crates/ox-cli/tests/settings_e2e.rs
expression: "&frame"
---
┌Settings──────────────────────────────────────────────────────────────────────┐
│▸ Connections [0]                                                             │
│▸ Models                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│               ┌New connection────────────────────────────────┐               │
│               │Name: Test  Enter to create. Esc to cancel.   │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
