crates/ox-cli/tests/snapshots/settings_e2e__new_connection_modal_just_opened.snap
---
source: crates/ox-cli/tests/settings_e2e.rs
expression: "&frame_modal_open"
---
┌Settings──────────────────────────────────────────────────────────────────────┐
│▸ Connections [0]                                                             │
│▸ Models                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│               ┌New connection────────────────────────────────┐               │
│               │Name:   Enter to create. Esc to cancel.       │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
