crates/ox-cli/tests/snapshots/settings_e2e__protocol_carousel_after_one_cycle.snap
---
source: crates/ox-cli/tests/settings_e2e.rs
expression: "&frame_after_one"
---
┌Settings──────────────────────────────────────────────────────────────────────┐
│▾ Connections [1]                                                             │
│  ▾ LMStudio                                                                  │
│  LMStudio                                                                    │
│      Name: LMStudio                                                          │
│      Protocol: ◂ openai  anthropic  openai ▸                                 │
│      Endpoint:                                                               │
│      Auth:                                                                   │
│      Key: (unset)                                                            │
│▸ Models                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
