crates/ox-cli/tests/snapshots/settings_e2e__protocol_carousel_after_two_cycles.snap
---
source: crates/ox-cli/tests/settings_e2e.rs
assertion_line: 1161
expression: "&frame_after_two"
---
┌Settings──────────────────────────────────────────────────────────────────────┐
│▾ Connections [1]                                                             │
│    + New connection                                                          │
│  ▾ LMStudio                                                                  │
│  LMStudio                                                                    │
│      Name: LMStudio                                                          │
│      Protocol: ◂ anthropic  openai  anthropic ▸                              │
│      Endpoint: http://127.0.0.1:1234                                         │
│      Auth: none                                                              │
│      Key: (unset)                                                            │
│▸ Models                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
