crates/ox-cli/tests/snapshots/settings_e2e__protocol_carousel_before_cycle.snap
---
source: crates/ox-cli/tests/settings_e2e.rs
expression: "&frame_before"
---
┌Settings──────────────────────────────────────────────────────────────────────┐
│▾ Connections [1]                                                             │
│  ▾ LMStudio                                                                  │
│  LMStudio                                                                    │
│      Name: LMStudio                                                          │
│      Protocol: ◂ anthropic  openai  anthropic ▸                              │
│      Endpoint: http://127.0.0.1:1234                                         │
│      Auth: none                                                              │
│      Key: (unset)                                                            │
│▸ Models                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
